Bug 756726 - Fix build of LDAP due to infallible hastables. r=dbienvenu